Fixed an issue where overflow was not hiding correctly.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@ body
     position: absolute;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .menu 
@@ -191,6 +192,7 @@ body
 }
 
 #footerlogo {
+    overflow: hidden;
     float: left;
     width: 30px;
     margin-left: 5px;
@@ -220,6 +222,7 @@ body
 .contact,
 .faq,
 .copyright {
+    overflow: hidden;
     font-family:"Helvetica Neue", sans-serif;color:black;font-size:15px;
     padding: 5px;
     text-align:center;
